--- a/resources/scss/all.css
+++ b/resources/scss/all.css
@@ -11173,4 +11173,8 @@ main {
   filter: drop-shadow(0px 0px 1px black);
 }
 
+.text-active {
+  color: #ffda6a !important;
+}
+
 /*# sourceMappingURL=all.css.map */
